--- a/H1EMU-Launcher/AboutPage.xaml
+++ b/H1EMU-Launcher/AboutPage.xaml
@@ -52,13 +52,13 @@
                         Lead Development
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="18">
-                        • Kentin (2015 - 2016 Server) •
+                        • Kentin •
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="20" TextDecorations="Underline" Foreground="#FFED1C24">
                         Co-Development
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="18">
-                        • Meme (2016 Server) •
+                        • Meme (2016 Server) • Avcio (2015 Server) •
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="20" TextDecorations="Underline" Foreground="#FFED1C24">
                         Administrators
@@ -70,7 +70,7 @@
                         Contributors
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="18">
-                        • Avcio • Eavilaswayce • Relish • LegendsNeveerrDie • Delusional • KOBUNIX • Rhett • ZamZam • UTIL_TRACELINE • LordWaycrest • 69_HaxMax • GinnessForever • Chriis • Flo •
+                        • Eavilaswayce • Relish • LegendsNeveerrDie • Delusional • KOBUNIX • Rhett • ZamZam • UTIL_TRACELINE • LordWaycrest  • 69_HaxMax • GinnessForever • Chriis • Flo •
                     </Paragraph>
                     <Paragraph TextAlignment="Center" FontSize="20" TextDecorations="Underline" Foreground="#FFED1C24">
                         Moderators
@@ -84,9 +84,16 @@
                     <Paragraph TextAlignment="Center" FontSize="18">
                         • rob138us •
                     </Paragraph>
-                    <Paragraph TextAlignment="Center" FontSize="18" FontWeight="Bold" TextDecorations="Underline" Margin="0,100,0,0">
-                        And a special thanks to everyone who joined the community and kept the motivation alive!
+                    <Paragraph TextAlignment="Center" FontSize="20" TextDecorations="Underline" Foreground="#FFED1C24">
+                        Translation Staff
                     </Paragraph>
+                    <Paragraph TextAlignment="Center" FontSize="18">
+                        • YuaneKo(Multi-language Develop/Translation) • AZAZ(Chinese) •
+                    </Paragraph>
+                    <Paragraph  TextAlignment="Center" FontSize="18" FontWeight="Bold" TextDecorations="Underline" Margin="0,100,0,0">
+                        <TextBlock Name="thanksLabel">And a special thanks to everyone who joined the community and kept the motivation alive!</TextBlock>
+                    </Paragraph>
+                    
                 </FlowDocument>
             </RichTextBox>
         </Grid>
